tests/ui/issues/issue-13497-2.stderr
error[E0515]: cannot return value referencing local variable `raw_lines`
  --> $DIR/issue-13497-2.rs:3:5
   |
LL | //     raw_lines
LL | ||         .iter()
   | ||_______________- `raw_lines` is borrowed here
LL | |          .map(|l| l.trim())
LL | |          .collect()
   | |___________________^ returns a value referencing data owned by the current function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0515`.
